update readme markdown header to display on pypi

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,8 @@ description-file = README.md
 
 [bdist_wheel]
 universal = 1 
+
+[nosetests]
+with-coverage = 1
+cover-package = jdata
+cover-html = 1
