use backports.lzma for python 2.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,14 @@ jobs:
     - python: 3.6
 
 before_install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install python-numpy python3-numpy python-lzma; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install python-numpy python3-numpy; fi
+  - pip install backports.lzma
 
 addons:
   apt:
     packages:
     - python3-numpy
     - python-numpy
-    - python-lzma
     update: true
 
 script:
