--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -10,6 +10,8 @@ jobs:
         python-version: ["2.7", "3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
+      - if: matrix.python-version == '2.7'
+        run: sudo ln -sf /usr/bin/python2.7 /usr/bin/python
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
