--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -16,7 +16,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - if: matrix.python-version == '3.7.17'
-        run: sudo ln -sf /usr/bin/python2.7 /usr/bin/python
+        run: |
+          sudo ln -sf /usr/bin/python2.7 `which python`
+          sudo ln -sf /usr/bin/pip2.7 `which pip`
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
