[ci] add benchcodecs.py to ci test

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -32,4 +32,4 @@ jobs:
           python -m unittest discover -v test
       - name: Codec benchmark
         run: |
-          python test/benchcodecs.py
+          python -m benchcodecs
