--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install numpy backports.lzma setuptools bjdata
+          pip install numpy backports.lzma setuptools
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Build sdist
         run: |
@@ -32,5 +32,6 @@ jobs:
           python -m unittest discover -v test
       - name: Codec benchmark
         run: |
+          pip install bjdata lz4
           cp -a test/benchcodecs.py .
           python -m benchcodecs
