[ci] fix blosc2 installation error

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -32,8 +32,8 @@ jobs:
           python -m unittest discover -v test
       - name: Codec benchmark
         run: |
-          pip install bjdata lz4 blosc2
-          pip install --upgrade numpy blosc2
+          pip install bjdata lz4
+          pip install blosc2 --no-binary=blosc2
           cp -a test/benchcodecs.py .
           python -m benchcodecs
 
