--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           python -m unittest discover -v test
       - name: Codec benchmark
+        if: false
         run: |
           pip install bjdata lz4
           pip install blosc2 --no-binary=blosc2
