--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --force-reinstall --no-cache-dir --upgrade numpy backports.lzma setuptools h5py scipy bjdata
+          pip install --force-reinstall --no-cache-dir --upgrade numpy backports.lzma setuptools h5py scipy bjdata lz4
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Build sdist
         run: |
@@ -32,7 +32,7 @@ jobs:
           python -m unittest discover -v test
       - name: Codec benchmark
         run: |
-          pip install --upgrade lz4 blosc2
+          pip install --no-binary=blosc2 blosc2
           cd benchmark
           python -m benchcodecs
       - name: NIfTI file loading benchmark
