--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -31,13 +31,13 @@ jobs:
         run: |
           python -m unittest discover -v test
       - name: Codec benchmark
-        if: matrix.python-version != '3.7' || matrix.python-version != '3.8' || matrix.python-version == '3.9'
+        if: matrix.python-version != '3.7' && matrix.python-version != '3.8' && matrix.python-version == '3.9'
         run: |
           pip install "numpy<2.0" blosc2
           cd benchmark
           python -m benchcodecs
       - name: Codec benchmark
-        if: matrix.python-version != '3.7' || matrix.python-version != '3.8' || matrix.python-version != '3.9'
+        if: matrix.python-version != '3.7' && matrix.python-version != '3.8' && matrix.python-version != '3.9'
         run: |
           pip install blosc2
           cd benchmark
